# ferrea-datasources

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  docstrings.yaml  format.yaml  oas-lint.yaml  redocly.yaml  testing.yaml
k8s/: 0-namespace.yaml  1-configmap.yaml  1-deployment.yaml  1-secret.yaml  2-deployment.yaml  2-service.yaml  4-ingress.yaml
oas/: bundle.yaml  root.oas.yaml
oas/paths/: datasource.yaml  paths.yaml  probes.yaml
oas/responses/: not-found.yaml
oas/schemas/: application_error.yaml  base.yaml  datasource.yaml  probe.yaml  validation_error.yaml
src/: app.py
src/adapters/: googlebooks.py  openlibrary.py
src/configs/: config.py  settings.toml
src/definitions/: oas.yaml  paths.yaml  tags.yaml
src/models/: api_google.py  api_openlibrary.py  api_service.py  oas.yaml  paths.yaml  probes.py  schemas.yaml
src/operations/: data_search.py  probe.py  probes.py  service_google.py  service_openlibrary.py
src/routers/: _builders.py  datasources.py  external_ds.py  probes.py
tests/: data_loader.py  test_app.py  test_placeholder.py
tests/adapters/: test_googlebooks.py  test_openlibrary.py
tests/operations/: test_service_google.py  test_service_openlibrary.py
tests/test_data/: google_books.json  openlibrary.json
